--- a/html/menu.html
+++ b/html/menu.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/stylesheet.css">
-    <link rel="stylesheet" href="../css/innergridStyle.css">
-    <link rel="stylesheet" href="../css/menuStyle.css">
+    <link rel="stylesheet" href="./css/stylesheet.css">
+    <link rel="stylesheet" href="./css/innergridStyle.css">
+    <link rel="stylesheet" href="./css/menuStyle.css">
     <title>Road Kill Grill</title>
 </head>
 <body class="container displayGrid">
