fixed it not showing up
fixed it I think

--- a/html/about.html
+++ b/html/about.html
@@ -10,7 +10,7 @@
 <body class="container displayGrid">
     <nav class="topbottom">
         <ul class="nav-bar textCenter">
-            <li class="nav-list"><a class="links whiteText noDec" href="./index.html">Home</a></li>
+            <li class="nav-list"><a class="links whiteText noDec" href="../index.html">Home</a></li>
             <li class="nav-list"><a class="links whiteText noDec" href="./about.html">About</a></li>
             <li class="nav-list"><a class="links whiteText noDec" href="./menu.html">Menu</a></li>
             <li class="nav-list"><a class="links whiteText noDec" href="./contact.html">Contact</a></li>
