Edited Nav Bar/ Added Files
Added new image
switched out old logo image
added takeout to nav bar on each page
created an about style sheet
created takeout style sheet
added html pages for AJAX stuff
added to takeout page

--- a/html/about.html
+++ b/html/about.html
@@ -5,14 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/stylesheet.css">
+    <link rel="stylesheet" href="../css/aboutStyle.css">
     <title>About Road Kill Grill</title>
 </head>
 <body class="container displayGrid">
     <nav class="topbottom">
         <ul class="nav-bar textCenter">
-            <li class="nav-list"><a class="links whiteText noDec" href="./index.html">Home</a></li>
+            <li class="nav-list"><a class="links whiteText noDec" href="../index.html">Home</a></li>
             <li class="nav-list"><a class="links whiteText noDec" href="./about.html">About</a></li>
             <li class="nav-list"><a class="links whiteText noDec" href="./menu.html">Menu</a></li>
+            <li class="nav-list"><a class="links whiteText noDec" href="./takeout.html">Order</a></li>
             <li class="nav-list"><a class="links whiteText noDec" href="./contact.html">Contact</a></li>
             <li class="nav-list"><a class="links whiteText noDec" href="./map.html">Map</a></li>
         </ul>
