--- a/html/menu.html
+++ b/html/menu.html
@@ -12,9 +12,10 @@
 <body class="container displayGrid">
     <nav class="topbottom">
         <ul class="nav-bar textCenter">
-            <li class="nav-list"><a class="links whiteText noDec" href="./index.html">Home</a></li>
+            <li class="nav-list"><a class="links whiteText noDec" href="../index.html">Home</a></li>
             <li class="nav-list"><a class="links whiteText noDec" href="./about.html">About</a></li>
             <li class="nav-list"><a class="links whiteText noDec" href="./menu.html">Menu</a></li>
+            <li class="nav-list"><a class="links whiteText noDec" href="./takeout.html">Order</a></li>
             <li class="nav-list"><a class="links whiteText noDec" href="./contact.html">Contact</a></li>
             <li class="nav-list"><a class="links whiteText noDec" href="./map.html">Map</a></li>
         </ul>
@@ -28,7 +29,7 @@
         <div class="leftside">
             <img src="../images/logo.PNG">
             <!-- appetizers lists -->
-            <h1 class="menuHeader textCenter">Appetizers</h1>
+            <h1 class="menuHeader textCenter whiteText">Appetizers</h1>
             <h3> Tire Track Fries <span class="price">$9.99</span></h3>
             <p>Fries loaded with nacho cheese, caramelized onions, bacon, and our
                 secret road style sauce!</p>
@@ -40,7 +41,7 @@
             <h3> Mozzarella Sticks <span class="price">$5.99</span></h3>
             <p>Crispy breaded mozzarella cheese fried and served with house-made spicy marinara.</p>
             <!-- burger list -->
-            <h1 class="menuHeader textCenter">Burgers</h1>
+            <h1 class="menuHeader textCenter whiteText">Burgers</h1>
             <h3> Royal Racoon Burger <span class="price">$12.99</span></h3>
             <p>A massive burger built for a king topped with lettuce, tomato, 
                 onion, cheddar cheese, and our secret road style sauce.</p>
@@ -54,7 +55,7 @@
             <p>This vegetarian burger made with impossible meat will blow you mind! Topped with 
                 lettuce, tomato, onion, cheddar cheese, and our secret road style sauce.</p>
             <!-- Kids Menu -->
-            <h1 class="menuHeader textCenter">Kids </h1>
+            <h1 class="menuHeader textCenter whiteText">Kids </h1>
             <h3> Chicken Fingers <span class="price">$5.99</span></h3>
             <p>2 chicken fingers with a side of fries served on a racoon shaped plate.</p>
             <h3> Grilled Cheese <span class="price">$4.99</span></h3>
@@ -67,7 +68,7 @@
         </div>          
         <div class="rightside">
             <!-- drink list -->
-            <h1 class="menuHeader textCenter">Drinks</h1>
+            <h1 class="menuHeader textCenter whiteText">Drinks</h1>
             <h3> Soda <span class="price">$1.99</span></h3>
             <p>Flavors: Coke, Diet Coke, Sprite, Root Beer, Mellow Yellow, Ginger Ale,
                     and Orange</p>
@@ -78,7 +79,7 @@
             <h3> Milkshakes <span class="price">$3.99</span></h3>
             <p>Flavors: Chocolate, Vanilla, Strawberry, Cookie Monster, S'mores</p>
             <!-- poultry options -->
-            <h1 class="menuHeader textCenter">Poultry</h1>
+            <h1 class="menuHeader textCenter whiteText">Poultry</h1>
             <h3> Flattened Chicken Sandwich <span class="price">$9.99</span></h3>
             <p> A breaded in our spice blend and fried chicken breast on a bun with 
                 garlic aioli, lettuce, and tomato</p>
@@ -88,7 +89,7 @@
             <h3> Chicken Finger Basket <span class="price">$8.99</span></h3>
             <p>4 chicken fingers served with fries and a side of our garlic aioli.</p>
             <!-- salad options -->
-            <h1 class="menuHeader textCenter">Salads </h1>
+            <h1 class="menuHeader textCenter whiteText">Salads </h1>
             <h3> Mystery Meat Salad <span class="price">$10.99</span></h3>
             <p>A fresh bed of spring mix topped with grilled meat, onions, fried green peppers, 
                 olives, grilled mushrooms, parmesan cheese, and our house-made italian dressing.</p>
