--- a/html/takeout.html
+++ b/html/takeout.html
@@ -5,10 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/stylesheet.css">
+    <link rel="stylesheet" href="../css/takeoutStyle.css">
     <link rel="stylesheet" href="../css/innergridStyle.css">
-    <link rel="stylesheet" href="../css/contactStyle.css">
-    <!-- Add icon library -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="/script/takeoutScript.js" defer></script>
     <title>Road Kill Grill</title>
 </head>
 <body class="container displayGrid">
@@ -23,38 +22,30 @@
         </ul>
     </nav>
     <header>
-        <h1 class="indentleft whiteText">How can we help you!</h1>
+        <h1 class="indentleft whiteText">Take-Out</h1>
     </header>
-    <main class="middle innergrid displayGrid">
-        <div class="newsize leftside">
-            Visit us at:<br>
-            U.S Rt. 66<br>
-            USA<br>
-            Follow our socials<br>
-            Stay connected<br>
-            <!-- Add font awesome icons -->
-            <a href="#" class="fa fa-facebook whiteText textCenter"></a>
-            <a href="#" class="fa fa-twitter whiteText textCenter"></a>
-            <a href="#" class="fa fa-snapchat whiteText textCenter"></a>
+    <main class="displayGrid middle innergrid">
+        <div class="leftside">
+            <div class="buttonContainer">
+                <button class="categories" onclick="GetCategory('/orderItems/appetizers.html');">Appetizers</button>
+                <button class="categories" onclick="GetCategory('/orderItems/burgers.html');">Burgers</button>
+                <button class="categories" onclick="GetCategory('/orderItems/poultry.html');">Poultry</button>
+                <button class="categories" onclick="GetCategory('/orderItems/salads.html');">Salads</button>
+                <button class="categories" onclick="GetCategory('/orderItems/kids.html');">Kids</button>
+                <button class="categories" onclick="GetCategory('/orderItems/drinks.html');">Drinks</button>
+            </div>
+            <section id="categoryDisplay">
+            </section>
         </div>
         <div class="rightside">
-            <img class="picture" src="../images/contact.jpg" alt="helpCenterPicture">
-            <!-- appetizers lists -->
-            <h1 class="menuHeader">Apply to work with us</h1>
-            <h2>Open Positions That are Available to Apply!</h2>
-            <ul>
-            <li>Cashier</li>
-            <li>Social Media Influencer</li>
-            <li>Delivery Person</li>
-            <li>Staff in Kitchen</li>
-            <ul>
+            <h3><img src="../images/shoppingCart.png"> Shopping Cart</h3>
         </div>
     </main>
     <!-- side bar1-->
     <aside class="sidebar1 middle">
     </aside>
     <!-- side bar2 -->
-    <aside class="sidebar2 middle">
+    <aside class="sidebar2 middle">   
     </aside>
     <footer class="topbottom">
         <p class="indentleft">copyright 2023</p>
