--- a/index.html
+++ b/index.html
@@ -23,6 +23,17 @@
     </header>
     <main class="homeMain middle">
         <h2 class="newsize whiteText textCenter">Welcome to Road Kill Grill</h2>
+        <div class="slides fade">
+            <img class="full" src="./images/Cheeseburger-Salad-2048x1365-1024x683-3148355378.jpg">
+        </div>
+    
+        <div class="slides fade">
+            <img class="full" src="./images/fast-food-1337656779.jpg">
+        </div>
+    
+        <div class="slides fade">
+            <img class="full" src="./images/bbq-food-685468004.jpg">
+        </div>
     </main>
     <!-- side bar1-->
     <aside class="sidebar1 middle">
@@ -33,5 +44,6 @@
     <footer class="topbottom">
         <p class="indentleft">copyright 2023</p>
     </footer>
+    <script src="./javascript/slideshow.js"></script>
 </body>
 </html>
