Changed takeout page
Added takeout js (drag/drop, ajax)
Added to takeout html
Added all html for menu item pages

--- a/html/orderItems/appetizers.html
+++ b/html/orderItems/appetizers.html
@@ -1,5 +1,5 @@
 <h3>Appetizers</h3>
-<p>Tire Track Fries</p>
-<p>Road Style Nachos</p>
-<p>Fried Pickles</p>
-<p>Mozzarella Sticks</p>
+<div id="item1" class="item" data-point-value="9.99" draggable="true" ondragstart="StartDrag( event );">Tire Track Fries <span class="price">$9.99</span></div>
+<div id="item2" class="item" data-point-value="7.99" draggable="true" ondragstart="StartDrag( event );">Road Style Nachos <span class="price">$7.99</span></div>
+<div id="item3" class="item" data-point-value="6.99" draggable="true" ondragstart="StartDrag( event );">Fried Pickles <span class="price">$6.99</span></div>
+<div id="item4" class="item" data-point-value="5.99" draggable="true" ondragstart="StartDrag( event );">Mozzarella Sticks <span class="price">$5.99</span></div>
