--- a/html/orderItems/salads.html
+++ b/html/orderItems/salads.html
@@ -1,4 +1,4 @@
 <h3>Salads</h3>
-<p>Mystery Meat Salad</p>
-<p>Roast Wild Bird Salad</p>
-<p>Roadside Greens Salad</p>
+<div id="item1" class="item" data-point-value="10.99" draggable="true" ondragstart="StartDrag( event );">Mystery Meat Salad <span class="price">$10.99</span></div>
+<div id="item2" class="item" data-point-value="11.99" draggable="true" ondragstart="StartDrag( event );">Roast Wild Bird Salad <span class="price">$11.99</span></div>
+<div id="item3" class="item" data-point-value="9.99" draggable="true" ondragstart="StartDrag( event );">Roadside Greens Salad <span class="price">$9.99</span></div>
