--- a/html/orderItems/drinks.html
+++ b/html/orderItems/drinks.html
@@ -1,22 +1,23 @@
 <h3>Drinks</h3>
-<p>Coke</p>
-<p>Diet Coke</p>
-<p>Root Beer</p>
-<p>Mellow Yellow</p>
-<p>Ginger Ale</p>
-<p>Orange Soda</p>
-<p>Lemonade</p>
-<p>Raspberry Lemonade</p>
-<p>Strawberry Lemonade</p>
-<p>Blueberry Lemonade</p>
-<p>Pineapple Lemonade</p>
-<p>Sweet Iced Tea</p>
-<p>Unsweet Iced Tea</p>
-<p>Peach Iced Tea</p>
-<p>Raspberry Iced Tea</p>
-<p>Mango Iced Tea</p>
-<p>Chocolate Milkshake</p>
-<p>Vanilla Milkshake</p>
-<p>Strawberry Milkshake</p>
-<p>Cookie Monster Milkshake</p>
-<p>S'mores Milkshake</p>
+<div id="item1" class="item" data-point-value="1.99" draggable="true" ondragstart="StartDrag( event );">Coke <span class="price">$1.99</span></div>
+<div id="item2" class="item" data-point-value="1.99" draggable="true" ondragstart="StartDrag( event );">Diet Coke <span class="price">$1.99</span></div>
+<div id="item3" class="item" data-point-value="1.99" draggable="true" ondragstart="StartDrag( event );">Mac and Cheese with Hot Dogs <span class="price">$1.99</span></div>
+<div id="item4" class="item" data-point-value="1.99" draggable="true" ondragstart="StartDrag( event );">Root Beer <span class="price">$1.99</span></div>
+<div id="item5" class="item" data-point-value="1.99" draggable="true" ondragstart="StartDrag( event );">Mellow Yellow <span class="price">$1.99</span></div>
+<div id="item6" class="item" data-point-value="1.99" draggable="true" ondragstart="StartDrag( event );">Ginger Ale <span class="price">$1.99</span></div>
+<div id="item7" class="item" data-point-value="1.99" draggable="true" ondragstart="StartDrag( event );">Orange Soda <span class="price">$1.99</span></div>
+<div id="item8" class="item" data-point-value="1.99" draggable="true" ondragstart="StartDrag( event );">Lemonade <span class="price">$1.99</span></div>
+<div id="item9" class="item" data-point-value="1.99" draggable="true" ondragstart="StartDrag( event );">Raspberry Lemonade <span class="price">$1.99</span></div>
+<div id="item10" class="item" data-point-value="1.99" draggable="true" ondragstart="StartDrag( event );">Strawberry Lemonade <span class="price">$1.99</span></div>
+<div id="item11" class="item" data-point-value="1.99" draggable="true" ondragstart="StartDrag( event );">Blueberry Lemonade <span class="price">$1.99</span></div>
+<div id="item12" class="item" data-point-value="1.99" draggable="true" ondragstart="StartDrag( event );">Pineapple Lemonade <span class="price">$1.99</span></div>
+<div id="item13" class="item" data-point-value="1.99" draggable="true" ondragstart="StartDrag( event );">Sweet Iced Tea <span class="price">$1.99</span></div>
+<div id="item14" class="item" data-point-value="1.99" draggable="true" ondragstart="StartDrag( event );">Unsweet Iced Tea <span class="price">$1.99</span></div>
+<div id="item15" class="item" data-point-value="1.99" draggable="true" ondragstart="StartDrag( event );">Peach Iced Tea <span class="price">$1.99</span></div>
+<div id="item16" class="item" data-point-value="1.99" draggable="true" ondragstart="StartDrag( event );">Raspberry Iced Tea <span class="price">$1.99</span></div>
+<div id="item17" class="item" data-point-value="1.99" draggable="true" ondragstart="StartDrag( event );">Mango Iced Tea <span class="price">$1.99</span></div>
+<div id="item18" class="item" data-point-value="3.99" draggable="true" ondragstart="StartDrag( event );">Chocolate Milkshake <span class="price">$3.99</span></div>
+<div id="item19" class="item" data-point-value="3.99" draggable="true" ondragstart="StartDrag( event );">Vanilla Milkshake <span class="price">$3.99</span></div>
+<div id="item20" class="item" data-point-value="3.99" draggable="true" ondragstart="StartDrag( event );">Strawberry Milkshake <span class="price">$3.99</span></div>
+<div id="item21" class="item" data-point-value="3.99" draggable="true" ondragstart="StartDrag( event );">Cookie Monster Milkshake <span class="price">$3.99</span></div>
+<div id="item22" class="item" data-point-value="3.99" draggable="true" ondragstart="StartDrag( event );">S'mores Milkshake <span class="price">$3.99</span></div>
