add total calculation/fix menu image
added order to index menu
added functions to compute total, tax, and subtotal
fixed logo image on menu page was too big

--- a/html/menu.html
+++ b/html/menu.html
@@ -27,7 +27,7 @@
     <!-- Main -->
     <main class="middle innergrid displayGrid">
         <div class="leftside">
-            <img src="../images/logo.PNG">
+            <img class="menuImage" src="../images/logo.PNG">
             <!-- appetizers lists -->
             <h1 class="menuHeader textCenter whiteText">Appetizers</h1>
             <h3> Tire Track Fries <span class="price">$9.99</span></h3>
