--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <li class="nav-list"><a class="links whiteText noDec" href="./index.html">Home</a></li>
             <li class="nav-list"><a class="links whiteText noDec" href="./html/about.html">About</a></li>
             <li class="nav-list"><a class="links whiteText noDec" href="./html/menu.html">Menu</a></li>
+            <li class="nav-list"><a class="links whiteText noDec" href="./html/takeout.html">Order</a></li>
             <li class="nav-list"><a class="links whiteText noDec" href="./html/contact.html">Contact</a></li>
             <li class="nav-list"><a class="links whiteText noDec" href="./html/map.html">Map</a></li>
         </ul>
