made edits to files
edited some files

--- a/html/map.html
+++ b/html/map.html
@@ -11,12 +11,12 @@
 <body class="container displayGrid">
     <nav class="topbottom">
         <ul class="nav-bar textCenter">
-            <li class="nav-list"><a class="links whiteText noDec" href="../index.html">Home</a></li>
-            <li class="nav-list"><a class="links whiteText noDec" href="./about.html">About</a></li>
-            <li class="nav-list"><a class="links whiteText noDec" href="./menu.html">Menu</a></li>
-            <li class="nav-list"><a class="links whiteText noDec" href="./takeout.html">Order</a></li>
-            <li class="nav-list"><a class="links whiteText noDec" href="./contact.html">Contact</a></li>
-            <li class="nav-list"><a class="links whiteText noDec" href="./map.html">Map</a></li>
+            <li class="nav-list"><a class="links whiteText noDec newsize25" href="../index.html">Home</a></li>
+            <li class="nav-list"><a class="links whiteText noDec newsize25" href="./about.html">About</a></li>
+            <li class="nav-list"><a class="links whiteText noDec newsize25" href="./menu.html">Menu</a></li>
+            <li class="nav-list"><a class="links whiteText noDec newsize25" href="./takeout.html">Order</a></li>
+            <li class="nav-list"><a class="links whiteText noDec newsize25" href="./contact.html">Contact</a></li>
+            <li class="nav-list"><a class="links whiteText noDec newsize25" href="./map.html">Map</a></li>
         </ul>
     </nav>
     <header>
