--- a/html/about.html
+++ b/html/about.html
@@ -11,12 +11,12 @@
 <body class="container displayGrid">
     <nav class="topbottom">
         <ul class="nav-bar textCenter">
-            <li class="nav-list"><a class="links whiteText noDec" href="../index.html">Home</a></li>
-            <li class="nav-list"><a class="links whiteText noDec" href="./about.html">About</a></li>
-            <li class="nav-list"><a class="links whiteText noDec" href="./menu.html">Menu</a></li>
-            <li class="nav-list"><a class="links whiteText noDec" href="./takeout.html">Order</a></li>
-            <li class="nav-list"><a class="links whiteText noDec" href="./contact.html">Contact</a></li>
-            <li class="nav-list"><a class="links whiteText noDec" href="./map.html">Map</a></li>
+            <li class="nav-list"><a class="links whiteText noDec newsize25" href="../index.html">Home</a></li>
+            <li class="nav-list"><a class="links whiteText noDec newsize25" href="./about.html">About</a></li>
+            <li class="nav-list"><a class="links whiteText noDec newsize25" href="./menu.html">Menu</a></li>
+            <li class="nav-list"><a class="links whiteText noDec newsize25" href="./takeout.html">Order</a></li>
+            <li class="nav-list"><a class="links whiteText noDec newsize25" href="./contact.html">Contact</a></li>
+            <li class="nav-list"><a class="links whiteText noDec newsize25" href="./map.html">Map</a></li>
         </ul>
     </nav>
     <header>
@@ -26,14 +26,14 @@
     <!-- Main -->
     <main class="middle">
         <img class="picture" src="../images/building.jpg"> 
-        <p> Road Kill Grill is a family owned business that prides itself on 
+        <p class="newsize25"> Road Kill Grill is a family owned business that prides itself on 
             the use of natural ingredients sourced locally. With an ever-changing 
             menu and wide variety of ingredients we hope that we can serve up a 
             unique experience every time you and your family come to visit!</p>
-        <p> Orginally opened in 1978 by brothers John and Bill Smith, we pride
+        <p class="newsize25"> Orginally opened in 1978 by brothers John and Bill Smith, we pride
             ourselves on preserving their dream of never comprimising on the 
             quality of our food. The resturant started on this oath and will die with it.</p>
-        <p>Our promise is what has allowed our company to begin expanding very shortly 
+        <p class="newsize25">Our promise is what has allowed our company to begin expanding very shortly 
             after opening. By 1983 Road Kill Grill had expanded to 5 different locations, 
             and today we host over 58. Mainly located on the East Coast we soon hope to expand 
             westward and make it known nation wide how amazing Road Kill Grill is! 
