--- a/html/takeout.html
+++ b/html/takeout.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/stylesheet.css">
+    <link rel="stylesheet" href="../css/takeoutStyle.css">
     <title>Road Kill Grill</title>
 </head>
 <body class="container displayGrid">
     <nav class="topbottom">
         <ul class="nav-bar textCenter">
-            <li class="nav-list"><a class="links whiteText noDec" href="../index.html">Home</a></li>
-            <li class="nav-list"><a class="links whiteText noDec" href="./about.html">About</a></li>
-            <li class="nav-list"><a class="links whiteText noDec" href="./menu.html">Menu</a></li>
-            <li class="nav-list"><a class="links whiteText noDec" href="./contact.html">Contact</a></li>
-            <li class="nav-list"><a class="links whiteText noDec" href="./map.html">Map</a></li>
+            <li class="nav-list"><a class="links whiteText noDec newsize25" href="../index.html">Home</a></li>
+            <li class="nav-list"><a class="links whiteText noDec newsize25" href="./about.html">About</a></li>
+            <li class="nav-list"><a class="links whiteText noDec newsize25" href="./menu.html">Menu</a></li>
+            <li class="nav-list"><a class="links whiteText noDec newsize25" href="./takeout.html">Order</a></li>
+            <li class="nav-list"><a class="links whiteText noDec newsize25" href="./contact.html">Contact</a></li>
+            <li class="nav-list"><a class="links whiteText noDec newsize25" href="./map.html">Map</a></li>
         </ul>
     </nav>
     <header>
