added tax/subtotal calculator
moved kids menu to right in menu
added innergrid css ref to takeout html + javascript ref
added tax/subtotal calculator

--- a/html/takeout.html
+++ b/html/takeout.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/stylesheet.css">
     <link rel="stylesheet" href="../css/takeoutStyle.css">
+    <link rel="stylesheet" href="../css/innergridStyle.css">
+    <script src="../javascript/takeoutScript.js" defer></script>
     <title>Road Kill Grill</title>
 </head>
 <body class="container displayGrid">
