edited some files
edited some files, mainly changed css, and fixed order tab being broken on homepage

--- a/html/orderItems/poultry.html
+++ b/html/orderItems/poultry.html
@@ -1,4 +1,4 @@
 <h3>Poultry</h3>
-<div id="item1" class="item" data-point-value="9.99" draggable="true" ondragstart="StartDrag( event );">Flattened Chicken Sandwich <span class="price">$9.99</span></div>
-<div id="item2" class="item" data-point-value="11.99" draggable="true" ondragstart="StartDrag( event );">Wild Bird Sandwich <span class="price">$11.99</span></div>
-<div id="item3" class="item" data-point-value="8.99" draggable="true" ondragstart="StartDrag( event );">Chicken Finger Basket <span class="price">$8.99</span></div>
+<div id="item1" class="topbottom whiteText item" data-point-value="9.99" draggable="true" ondragstart="StartDrag( event );">Flattened Chicken Sandwich <span class="price">$9.99</span></div>
+<div id="item2" class="topbottom whiteText item" data-point-value="11.99" draggable="true" ondragstart="StartDrag( event );">Wild Bird Sandwich <span class="price">$11.99</span></div>
+<div id="item3" class="topbottom whiteText item" data-point-value="8.99" draggable="true" ondragstart="StartDrag( event );">Chicken Finger Basket <span class="price">$8.99</span></div>
