--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <li class="nav-list"><a class="links whiteText noDec newsize25" href="./index.html">Home</a></li>
             <li class="nav-list"><a class="links whiteText noDec newsize25" href="./html/about.html">About</a></li>
             <li class="nav-list"><a class="links whiteText noDec newsize25" href="./html/menu.html">Menu</a></li>
-            <li class="nav-list"><a class="links whiteText noDec newsize25" href="./takeout.html">Order</a></li>
+            <li class="nav-list"><a class="links whiteText noDec newsize25" href="./html/takeout.html">Order</a></li>
             <li class="nav-list"><a class="links whiteText noDec newsize25" href="./html/contact.html">Contact</a></li>
             <li class="nav-list"><a class="links whiteText noDec newsize25" href="./html/map.html">Map</a></li>
         </ul>
